# autopilot

./: .gitignore  CLAUDE.md  PHILOSOPHY.md  README.md  pyproject.toml
docs/cli/: README.md
docs/concepts/: datasets.md  experiments.md  policies.md
examples/: README.md
examples/protim/: README.md  pyproject.toml  run.py  run_trainer.py
examples/protim/datasets/: train.jsonl  val.jsonl
examples/protim/prompts/: system.txt
examples/protim/protim/: data.py  module.py  trainer.py
examples/textmatch/: .gitignore  README.md  pyproject.toml  run.py  run_trainer.py
templates/project/: cli.py  data.py  module.py
tests/: conftest.py  helpers.py
tests/ai/: test_agent.py  test_agent_optimizer.py  test_agents.py  test_checkpoints.py  test_coding.py  test_data.py  test_data_streaming.py  test_file_store.py  test_generator.py  test_gradient_collator.py  test_judge.py  test_judge_loss.py  test_models.py  test_path_parameter.py  test_runtime.py  test_schemas.py  test_step_decorators.py  test_steps.py  test_text_gradient.py
tests/cli/: test_agent.py  test_agent_cmd.py  test_ai_cli.py  test_ai_handlers.py  test_command.py  test_context_multiproject.py  test_diagnose.py  test_diagnose_cmd.py  test_dry_run_e2e.py  test_expose.py  test_judge_cmd.py  test_memory.py  test_memory_cmd.py  test_project.py  test_project_cmd.py  test_propose.py  test_propose_cmd.py  test_run.py  test_status.py  test_status_cmd.py  test_store.py  test_trace.py  test_trace_cmd.py  test_workspace_multiproject.py
tests/core/: test_artifact.py  test_autopilot_module.py  test_callbacks.py  test_checkpoint.py  test_comparison.py  test_config_multiproject.py  test_cost_tracker.py  test_data_recorder.py  test_diagnose_callback.py  test_diagnostics.py  test_diagnostics_callback.py  test_experiment.py  test_gradient.py  test_graph.py  test_logger.py  test_loops.py  test_memory.py  test_metric.py  test_module.py  test_orchestrator.py  test_parameter.py  test_paths.py  test_proposal.py  test_regression.py  test_run_state_callback.py  test_serialization.py  test_stage_callbacks.py  test_stage_io.py  (+7 more)
(+156 files in other folders)
